tests/errors/semantic/non_blocking/UNION_RETURN_TYPE_headers.py
# pylint: disable=missing-function-docstring, missing-module-docstring

#$ header function f(int, int) results(int)
#$ header function f(float, float) results(float)

def f(a, b):
    return a+b
